--- a/index.html
+++ b/index.html
@@ -10,334 +10,29 @@
 </head>
 
 <body>
-    <main>
-        <aside class="sidebar" data-sidebar>
-            <div class="sidebar-info">
-                <figure class="avatar-box">
-                    <img src="/assets/images/my-avatar.png" alt="">
-                </figure>
+    <header class="header">
+        <a href="#" class="logo">Maycon Araujo</a>
 
-            </div class="info-content">
-            <h1 class="name" title="Maycon Araujo">Maycon Araújo</h1>
-            <p class="tittle">Web Designer</p>
-            <div>
+        <nav class="navbar">
+            <a href="#" class="active">Home</a>
+            <a href="#">Sobre</a>
+            <a href="#">Serviços</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Contato</a>
+        </nav>
+    </header>
 
-                <button class="info_more-btn" data-sidebar-btn>
-                    <span>Show Contacts</span>
-                    <ion-icon name="chevron-down"></ion-icon>
-                </button>
+    <section class="home">
+        <div class="home-content">
+            <h1>Olá, Eu sou o Maycon</h1>
+            <h3>Seja bem-vindo ao meu portfólio, com trabalhos desenvolvidos como freelancer e como desenvolvedor Web.</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum sed, fugit consequuntur expedita tempora voluptate. Modi iure ab error, sit mollitia, nam cumque praesentium quis laborum quos libero sed ut.</p>
+            <div class="btn-box">
+                <a href="#">Contratar</a>
+                <a href="#">Vamos Conversar</a>
             </div>
-            <div class="sidebar-info_more">
-                <div class="separator"></div>
-                <ul class="contact-list">
-                    <li class="contact-item">
-                        <div class="icon-box">
-                            <ion-icon name="mail-outline"></ion-icon>
-                        </div>
-
-                        <div class="contact-info">
-                            <p class="contact-info">Email</p>
-                            <a href="mailto:mayconvbatista84@gmail.com"
-                                class="contact-link">mayconvbatista84@gmail.com</a>
-                        </div>
-                    </li>
-
-                    <li class="contact-item">
-                        <div class="icon-box">
-                            <ion-icon name="phone-portrait-outline"></ion-icon>
-                        </div>
-
-                        <div class="contact-info">
-                            <p class="contact-info">Phone</p>
-                            <a href="tel:+12133522795" class="contact-link"> +55 (31) 99622-5969</a>
-                        </div>
-                    </li>
-
-                    <li class="contact-item">
-                        <div class="icon-box">
-                            <ion-icon name="calendar-outline"></ion-icon>
-                        </div>
-
-                        <div class="contact-info">
-                            <p class="contact-info">Birthday</p>
-                            <a href="" class="contact-link">14, Agosto, 2002</a>
-                        </div>
-                    </li>
-
-                    <li class="contact-item">
-
-                        <div class="icon-box">
-                            <ion-icon name="location-outline"></ion-icon>
-                        </div>
-
-                        <div class="contact-info">
-                            <p class="contact-title">Location</p>
-
-                            <address>Viçosa, Minas Gerais, Brasil</address>
-                        </div>
-
-                    </li>
-                </ul>
-
-                <div class="separator"></div>
-                <ul class="social-list">
-                    <li class="social-item">
-                        <a href="#" class="social-link">
-                            <ion-icon name="logo-facebook"></ion-icon>
-                        </a>
-                    </li>
-
-                    <li class="social-item">
-                        <a href="#" class="social-link">
-                            <ion-icon name="logo-twitter"></ion-icon>
-                        </a>
-                    </li>
-
-                    <li class="social-item">
-                        <a href="#" class="social-link">
-                            <ion-icon name="logo-instagram"></ion-icon>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </aside>
-        <!-- 
-            -Main Content
-        -->
-        <div class="main-content">
-            <!-- 
-                -Nav Bar
-            -->
-            <nav class="navbar">
-                <ul class="navbar-list">
-
-                    <li class="navbar-item">
-                        <button class="navbar-link  active" data-nav-link>About</button>
-                    </li>
-
-                    <li class="navbar-item">
-                        <button class="navbar-link" data-nav-link>Resume</button>
-                    </li>
-
-                    <li class="navbar-item">
-                        <button class="navbar-link" data-nav-link>Portfolio</button>
-                    </li>
-
-                    <li class="navbar-item">
-                        <button class="navbar-link" data-nav-link>Blog</button>
-                    </li>
-
-                    <li class="navbar-item">
-                        <button class="navbar-link" data-nav-link>Contact</button>
-                    </li>
-
-                </ul>
-            </nav>
-
-            <!-- 
-                -#Sobre
-            -->
-            <article class="abount active" data-page="about">
-                <header>
-                    <h2 class="h2 article-title">Sobre mim</h2>
-                </header>
-                <section class="abount-text">
-                    <p>Sou UI/UX Designer de Viçosa, trabalhando
-                        com desenvolvimento web e automações. Gosto de transformar problemas complexos
-                        em designs simples, bonitos e intuitivos.
-                    </p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident obcaecati ipsa autem,
-                        natus distinctio eum repellat minima odio in quidem quos recusandae dignissimos assumenda
-                        aut doloremque illum iure, culpa quis.
-                    </p>
-                </section>
-            <!--
-                -#Testemunhos
-            -->
-                <section class="service">
-                    <h3 class="h3 service-title">O que eu estou fazendo</h3>
-                    <ul class="service-list">
-                        <li class="service-item">
-                            <div class="service-icon-box">
-                                <img src="./assets/images/icon-design.svg" alt="design icon" width="40">
-
-                            </div>
-
-                            <div class="service-content-box">
-                                <h4 class="h4 service-item-title">Web design</h4>
-
-                                <p class="service-item-text">
-                                    Interfaces para websites que funcionam em qualquer dispositivo, focado em seu
-                                    público e forte apelo visual.
-                                </p>
-                            </div>
-                        </li>
-
-                        <li class="service-item">
-                            <div class="service-icon-box">
-                                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
-                            </div>
-                            <div class="service-content-box">
-                                <h4 class="h4 service-item-title">Web development</h4>
-                                <p class="service-item-text">
-                                    Crio sites do zero, sem templates ou modelos prontos. Otimizados e responsivos.
-                                </p>
-                            </div>
-                        </li>
-
-                        <li class="service-item">
-                            <div class="service-icon-box">
-                                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
-                            </div>
-
-                            <div class="service-content-box">
-                                <h4 class="h4 service-item-title">Mobile apps</h4>
-
-                                <p class="service-item-text">
-                                    Desenvolvimento de apps para android com Lowcode.
-                                </p>
-                            </div>
-                        </li>
-
-                        <li class="service-item">
-
-                            <div class="service-icon-box">
-                                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
-                            </div>
-
-                            <div class="service-content-box">
-                                <h4 class="h4 service-item-title">Hardware</h4>
-
-                                <p class="service-item-text">
-                                    Técnico em informatica, conserto, montagem e manutenção em PCs e Notebooks
-                                </p>
-                            </div>
-
-                        </li>
-
-                    </ul>
-                </section>
-            </article>
-
-
-            <!--
-            - testimonials
-            -->
-
-            <section class="testimonials">
-
-                <h3 class="h3 testimonials-title">Testemunhos</h3>
-
-                <ul class="testimonials-list has-scrollbar">
-
-                    <li class="testimonials-item">
-                        <div class="content-card" data-testimonials-item>
-
-                            <figure class="testimonials-avatar-box">
-                                <img src="./assets/images/avatar-1.png" alt="Daniel lewis" width="60"
-                                    data-testimonials-avatar>
-                            </figure>
-
-                            <h4 class="h4 testimonials-item-title" data-testimonials-title>Daniel lewis</h4>
-
-                            <div class="testimonials-text" data-testimonials-text>
-                                <p>
-                                    Richard was hired to create a corporate identity. We were very pleased with the work
-                                    done. She has a
-                                    lot of experience
-                                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet,
-                                    ullamcous cididt
-                                    consectetur adipiscing
-                                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
-                                </p>
-                            </div>
-
-                        </div>
-                    </li>
-
-                    <li class="testimonials-item">
-                        <div class="content-card" data-testimonials-item>
-
-                            <figure class="testimonials-avatar-box">
-                                <img src="./assets/images/avatar-2.png" alt="Jessica miller" width="60"
-                                    data-testimonials-avatar>
-                            </figure>
-
-                            <h4 class="h4 testimonials-item-title" data-testimonials-title>Jessica miller</h4>
-
-                            <div class="testimonials-text" data-testimonials-text>
-                                <p>
-                                    Richard was hired to create a corporate identity. We were very pleased with the work
-                                    done. She has a
-                                    lot of experience
-                                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet,
-                                    ullamcous cididt
-                                    consectetur adipiscing
-                                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
-                                </p>
-                            </div>
-
-                        </div>
-                    </li>
-
-                    <li class="testimonials-item">
-                        <div class="content-card" data-testimonials-item>
-
-                            <figure class="testimonials-avatar-box">
-                                <img src="./assets/images/avatar-3.png" alt="Emily evans" width="60"
-                                    data-testimonials-avatar>
-                            </figure>
-
-                            <h4 class="h4 testimonials-item-title" data-testimonials-title>Emily evans</h4>
-
-                            <div class="testimonials-text" data-testimonials-text>
-                                <p>
-                                    Richard was hired to create a corporate identity. We were very pleased with the work
-                                    done. She has a
-                                    lot of experience
-                                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet,
-                                    ullamcous cididt
-                                    consectetur adipiscing
-                                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
-                                </p>
-                            </div>
-
-                        </div>
-                    </li>
-
-                    <li class="testimonials-item">
-                        <div class="content-card" data-testimonials-item>
-
-                            <figure class="testimonials-avatar-box">
-                                <img src="./assets/images/avatar-4.png" alt="Henry william" width="60"
-                                    data-testimonials-avatar>
-                            </figure>
-
-                            <h4 class="h4 testimonials-item-title" data-testimonials-title>Henry william</h4>
-
-                            <div class="testimonials-text" data-testimonials-text>
-                                <p>
-                                    Richard was hired to create a corporate identity. We were very pleased with the work
-                                    done. She has a
-                                    lot of experience
-                                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet,
-                                    ullamcous cididt
-                                    consectetur adipiscing
-                                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
-                                </p>
-                            </div>
-
-                        </div>
-                    </li>
-
-                </ul>
-
-            </section>
         </div>
-    </main>
-    <footer>
-        <p>&copy; 2024 Maycon Araújo. Todos os direitos reservados.</p>
-    </footer>
+    </section>
 
     <script src="assets/js/scripts.js"></script>
 </body>
