--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Portfolio</title>
     <link rel="shortcut icon" href="/assets/images/Logo_white_256.ico" type="image/x-icon">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -25,12 +26,20 @@
     <section class="home">
         <div class="home-content">
             <h1>Olá, Eu sou o Maycon</h1>
-            <h3>Seja bem-vindo ao meu portfólio, com trabalhos desenvolvidos como freelancer e como desenvolvedor Web.</h3>
+            <h3>Desenvolvedor Python</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum sed, fugit consequuntur expedita tempora voluptate. Modi iure ab error, sit mollitia, nam cumque praesentium quis laborum quos libero sed ut.</p>
             <div class="btn-box">
                 <a href="#">Contratar</a>
-                <a href="#">Vamos Conversar</a>
+                <a href="#">Saiba Mais</a>
             </div>
+        </div>
+
+        <div class="home-sci">
+            <a href="#"><i class='bx bxl-instagram'></i></a>
+            <a href="#"><i class='bx bxl-twitter'></i></a>
+            <a href="#"><i class='bx bxl-linkedin'></i></a>
+            <a href="#"><i class='bx bxl-behance'></i></a>
+            <a href="#"><i class='bx bxl-github'></i></a>
         </div>
     </section>
 
