--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="header">
-        <a href="#" class="logo">.Maycon Araujo</a>
+        <a href="#" class="logo"><img src="./assets/images/Logo_white_256.ico" alt="">Maycon Araújo</a>
 
         <nav class="navbar">
             <a href="#" class="active">Home</a>
