--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         </div>
 
         <div class="home-sci">
-            <a href="#"><i class='bx bxl-instagram'></i></a>
-            <a href="#"><i class='bx bxl-twitter'></i></a>
-            <a href="#"><i class='bx bxl-linkedin'></i></a>
-            <a href="#"><i class='bx bxl-behance'></i></a>
-            <a href="#"><i class='bx bxl-github'></i></a>
+            <a href="https://www.instagram.com/mayconaraujo.tech/"><i class='bx bxl-instagram'></i></a>
+            <a href="https://twitter.com/M4yc_"><i class='bx bxl-twitter'></i></a>
+            <a href="https://www.linkedin.com/in/mayconaraujo-tech/"><i class='bx bxl-linkedin'></i></a>
+            <a href="https://www.behance.net/mayconaraujo2"><i class='bx bxl-behance'></i></a>
+            <a href="https://github.com/M4yc"><i class='bx bxl-github'></i></a>
         </div>
     </section>
 
