--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="home-content">
             <h1>Olá, Eu sou o Maycon</h1>
             <h3>Desenvolvedor Python</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum sed, fugit consequuntur expedita tempora voluptate. Modi iure ab error, sit mollitia, nam cumque praesentium quis laborum quos libero sed ut.</p>
+            <p>Lorem ipsum, dolor sit ame mollitia, nam cumque praesentium quis laborum quos libero sed ut.</p>
             <div class="btn-box">
                 <a href="#">Contratar</a>
                 <a href="#">Saiba Mais</a>
