--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
         </div>
     </section>
 
+    <div class="img-container">
+        <img src="/assets/images/photo1.jpg" alt="Woman">
+    </div>
+
     <script src="assets/js/scripts.js"></script>
 </body>
 
