--- a/index.html
+++ b/index.html
@@ -42,10 +42,32 @@
         </div>
     </section>
 
-    <div class="img-container">
-        <img src="/assets/images/photo1.jpg" alt="Woman">
-    </div>
+    <section class="work section" id="work">
+        <h2 class="section-title">Works</h2>
 
+        <div class="work__container bd-grid">
+            <a href="work__img">
+                <img src="/assets/images/photo1.jpg" alt="Woman">
+            </a>
+            <a href="work__img">
+                <img src="/assets/images/photo1.jpg" alt="Woman">
+            </a>
+            <a href="work__img">
+                <img src="/assets/images/photo1.jpg" alt="Woman">
+            </a>
+            <a href="work__img">
+                <img src="/assets/images/photo1.jpg" alt="Woman">
+            </a>
+            <a href="work__img">
+                <img src="/assets/images/photo1.jpg" alt="Woman">
+            </a>
+            <a href="work__img">
+                <img src="/assets/images/photo1.jpg" alt="Woman">
+            </a>
+        </div>
+
+    </section>
+    
     <script src="assets/js/scripts.js"></script>
 </body>
 
