:sparkles: Add Matrix BG

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <canvas id="matrix"></canvas>
+    <div class="overlay"></div>
     <header class="header">
         <a href="#" class="logo"><img src="./assets/images/Logo_white_256.ico" alt="">Maycon Araújo</a>
 
