:sparkles: Update color

--- a/index.html
+++ b/index.html
@@ -43,7 +43,18 @@
             <a href="https://github.com/M4yc" target="_blank"><i class='bx bxl-github'></i></a>
         </div>
     </section>
-    
+    <section class="projects">
+        <h2>Projetos Desenvolidos</h2>
+        <div class="project-grid">
+            <div class="project-1">
+                <h3>Integração</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                    Ut odit quaerat aliquid distinctio voluptas corporis. 
+                    Delectus dolorum placeat saepe, dolores modi rem earum doloremque, 
+                    minima assumenda totam soluta libero voluptas?</p>
+            </div>
+        </div>
+    </section>
     <script src="assets/js/scripts.js"></script>
 </body>
 
