:sparkles: Update Infos

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </section>
     <section class="projects">
-        <h2>Projetos Desenvolidos</h2>
+        <h2>Projetos</h2>
         <div class="project-grid">
             <div class="project-1">
                 <h3>Integração</h3>
