:truck: Mov: Move paste

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Portfolio</title>
-    <link rel="shortcut icon" href="/assets/images/Logo_white_256.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/ico/Logo_white_256.ico" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
@@ -14,7 +14,7 @@
     <canvas id="matrix"></canvas>
     
     <header class="header">
-        <a href="#" class="logo"><img src="./assets/images/Logo_white_256.ico" alt="">Maycon Araújo</a>
+        <a href="#" class="logo"><img src="./assets/ico/Logo_white_256.ico" alt="">Maycon Araújo</a>
 
         <nav class="navbar">
             <a href="#" class="active">Home</a>
@@ -54,7 +54,7 @@
     <section class="s-about">
         <div class="about-container">
             <div class="about-content">
-                <img src="/assets/images/photo2.jpg" alt="Maycon Araujo">
+                <img src="/assets/jpg/photo2.jpg" alt="Maycon Araujo">
                 <div class="about-text">
                     <h4>Quem sou</h4>
                     <h2>Maycon Araujo</h2>
@@ -86,7 +86,7 @@
             </div>
         </div>
     </section>
-    <script src="assets/js/scripts.js"></script>
+    <script src="js/scripts.js"></script>
     <div class="overlay"></div>
 </body>
 
