:sparkles: Add Footer

--- a/index.html
+++ b/index.html
@@ -86,6 +86,21 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="grid-layout">
+            <p>
+                Copyright © 2024
+                <a href="#" rel="noopener" target="_blank">Maycon Araujo</a>Todos os direitos reservados.
+            </p>
+
+            <div>
+                <p>Powered by</p>
+                <img
+                src="/assets/ico/Logo_white_256.ico"
+                alt="Logo MV"/>
+            </div>
+        </div>
+    </footer>
     <script src="js/scripts.js"></script>
     <div class="overlay"></div>
 </body>
