:sparkles: Add sections

--- a/index.html
+++ b/index.html
@@ -73,6 +73,37 @@
         </div>
     </section>
     
+    <section class="s-experience">
+        <div class="layout-grid">
+            <h2>Experiencias</h2>
+            <div class="experience">
+                <div class="option-experience">
+                    <div class="company one">
+                        <h3>Naja Cursos</h3>
+                    </div>
+                    <div class="company two">
+                        <h3>Nero</h3>
+                    </div>
+                    <div class="company three">
+                        <h3>SM Marketing</h3>
+                    </div>
+                    <div class="text-experience">
+                        <div class="title-experince">
+                            <h4>Monitor de Cursos</h4>
+                            <p>Dez 2021 - Mar 2022 (4 Meses)</p>
+                        </div>
+                        <h5> Naja Cursos</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                            Praesentium veritatis quisquam nisi labore dolorum voluptas 
+                            temporibus nulla illum et ipsam maiores necessitatibus in ut 
+                            nihil, atque, similique nostrum odio omnis.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
 
     <section class="s-projects">
         <h2>Projetos</h2>
@@ -86,6 +117,22 @@
             </div>
         </div>
     </section>
+
+<section class="s-services">
+    <div class="grid-layout">
+        <h4>Como posso te ajudar</h4>
+        <h3>Meus Serviços</h3>
+        <div class="grid-service">
+            <div class="service-one">
+                <i class='bx bxs-layout'></i>
+                <h3>Design de Interfaces Web</h3>
+                <p>Interfaces para websites que funcionam em qualquer dispositivo, 
+                    focado em seu público e forte apelo visual.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
     <footer>
         <div class="grid-layout">
             <p>
@@ -93,11 +140,9 @@
                 <a href="#" rel="noopener" target="_blank">Maycon Araujo</a>Todos os direitos reservados.
             </p>
 
-            <div>
+            <div class="powered-by">
                 <p>Powered by</p>
-                <img
-                src="/assets/ico/Logo_white_256.ico"
-                alt="Logo MV"/>
+                <img src="/assets/ico/Logo_white_256.ico"alt="Logo MV"/>
             </div>
         </div>
     </footer>
