--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 
     </div>
     <header class="header">
-        <a href="#" class="logo"><img src="./assets/ico/Logo_white_256.ico" alt="">Maycon Araújo</a>
-
+        <div class="logo">
+            <a href="#" class="logo"><img src="./assets/ico/Logo_white_256.ico" alt="Logo Maycon"></a>
+            <h3>Maycon Araujo</h3>
+        </div>
         <nav class="navbar">
             <a href="#" class="active">Home</a>
             <a href="#">Sobre</a>
@@ -56,7 +58,7 @@
     <section class="s-about">
         <div class="about-container">
             <div class="about-content">
-                <img src="/assets/jpg/photo2.jpg" alt="Maycon Araujo">
+                <img src="./assets/jpg/photo2.jpg" alt="Maycon Araujo">
                 <div class="about-text">
                     <h4 class="about-h4">Quem sou</h4>
                     <h2 class="about-h2">Maycon Araujo</h2>
