:sparkles: Add images config

--- a/index.html
+++ b/index.html
@@ -114,37 +114,39 @@
         <h2>Meus Projetos</h2>
         <div class="projects-grid">
             <div class="project-card">
-                <img src="#" alt="Projeto 1">
+                <img src="./assets/jpg/photo4.jpg" alt="Projeto 1">
                 <h3>Título do Projeto 1</h3>
                 <p>Descrição breve do projeto 1.</p>
                 <div class="tags">
-                    <span>#Tag1</span>
-                    <span>#Tag2</span>
+                    <span>Instagram</span>
+                    <span>Facebook</span>
                 </div>
                 <a href="#" class="btn-live-demo">Live Demo</a>
             </div>
             <div class="project-card">
-                <img src="#" alt="Projeto 2">
+                <img src="./assets/jpg/photo5.jpg" alt="Projeto 2">
                 <h3>Título do Projeto 2</h3>
                 <p>Descrição breve do projeto 2.</p>
                 <div class="tags">
-                    <span>#Tag1</span>
-                    <span>#Tag2</span>
+                    <span>Esp32</span>
+                    <span>IoT</span>
+                    <span>Sensores</span>
                 </div>
                 <a href="#" class="btn-live-demo">Live Demo</a>
             </div>
             <div class="project-card">
-                <img src="#" alt="Projeto 3">
+                <img src="./assets/jpg/photo6.jpg" alt="Projeto 3">
                 <h3>Título do Projeto 3</h3>
                 <p>Descrição breve do projeto 3.</p>
                 <div class="tags">
-                    <span>#Tag1</span>
-                    <span>#Tag2</span>
+                    <span class="span-arduino">Arduino</span>
+                    <span class="span-sensores">Sensores</span>
+                    
                 </div>
                 <a href="#" class="btn-live-demo">Live Demo</a>
             </div>
             <div class="project-card">
-                <img src="#" alt="Projeto 4">
+                <img src="./assets/jpg/photo7.jpg" alt="Projeto 4">
                 <h3>Título do Projeto 4</h3>
                 <p>Descrição breve do projeto 4.</p>
                 <div class="tags">
@@ -154,7 +156,7 @@
                 <a href="#" class="btn-live-demo">Live Demo</a>
             </div>
             <div class="project-card">
-                <img src="#" alt="Projeto 5">
+                <img src="./assets/jpg/photo8.jpg" alt="Projeto 5">
                 <h3>Título do Projeto 5</h3>
                 <p>Descrição breve do projeto 5.</p>
                 <div class="tags">
@@ -164,7 +166,7 @@
                 <a href="#" class="btn-live-demo">Live Demo</a>
             </div>
             <div class="project-card">
-                <img src="#" alt="Projeto 6">
+                <img src="./assets/jpg/photo9.jpg" alt="Projeto 6">
                 <h3>Título do Projeto 6</h3>
                 <p>Descrição breve do projeto 6.</p>
                 <div class="tags">
@@ -174,17 +176,18 @@
                 <a href="#" class="btn-live-demo">Live Demo</a>
             </div>
             <div class="project-card">
-                <img src="#" alt="Projeto 7">
+                <img src="./assets/jpg/photo10.jpg" alt="Projeto 7">
                 <h3>Título do Projeto 7</h3>
                 <p>Descrição breve do projeto 7.</p>
                 <div class="tags">
-                    <span>#Tag1</span>
-                    <span>#Tag2</span>
+                    <span class="span-html">HTML</span>
+                    <span class="span-css">CSS</span>
+                    <span class="span-javascript">Java Script</span>
                 </div>
                 <a href="#" class="btn-live-demo">Live Demo</a>
             </div>
             <div class="project-card">
-                <img src="#" alt="Projeto 8">
+                <img src="./assets/jpg/photo11.jpg" alt="Projeto 8">
                 <h3>Título do Projeto 8</h3>
                 <p>Descrição breve do projeto 8.</p>
                 <div class="tags">
@@ -201,28 +204,28 @@
         <div class="services-grid">
             <div class="service-card">
                 <div class="icon">
-                    <img src="path-to-your-icon1.png" alt="Design Gráfico">
+                    <i class='bx bx-palette'></i>
                 </div>
                 <h3>Design Gráfico</h3>
                 <p>Criamos designs únicos e atrativos que comunicam sua mensagem de forma eficaz.</p>
             </div>
             <div class="service-card">
                 <div class="icon">
-                    <img src="path-to-your-icon2.png" alt="Desenvolvimento Web">
+                    <i class='bx bx-globe' ></i>
                 </div>
                 <h3>Desenvolvimento Web</h3>
                 <p>Desenvolvimento de sites responsivos e funcionais com as melhores práticas de UI/UX.</p>
             </div>
             <div class="service-card">
                 <div class="icon">
-                    <img src="path-to-your-icon3.png" alt="Consultoria de TI">
+                    <i class='bx bxs-invader' ></i>
                 </div>
                 <h3>Consultoria de TI</h3>
                 <p>Consultoria especializada para otimizar os processos tecnológicos da sua empresa.</p>
             </div>
             <div class="service-card">
                 <div class="icon">
-                    <img src="path-to-your-icon4.png" alt="Marketing Digital">
+                    <i class='bx bxl-instagram' ></i>
                 </div>
                 <h3>Marketing Digital</h3>
                 <p>Estratégias de marketing digital para aumentar sua presença online e gerar mais leads.</p>
