:bug: Fix SVG do contact

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
             <div class="powered-by">
                 <p>Powered by</p>
-                <img src="/assets/ico/Logo_white_256.ico"alt="Logo MV"/>
+                <img src="./assets/ico/Logo_white_256.ico"alt="Logo MV"/>
             </div>
         </div>
     </footer>
