--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
             <a href="https://www.behance.net/mayconaraujo2" target="_blank"><i class='bx bxl-behance'></i></a>
             <a href="https://github.com/M4yc" target="_blank"><i class='bx bxl-github'></i></a>
         </div>
-
+        
+        <div class="home-avatar">
+            <img src="./assets/png/Avatar.png" alt="Avatar Maycon Araujo">
+        </div>
 
         <div class="home-hero__mouse-scroll-cont">
             <div class="mouse"></div>
