:sparkles: Add Project 4

--- a/index.html
+++ b/index.html
@@ -46,10 +46,6 @@
             <a href="https://www.behance.net/mayconaraujo2" target="_blank"><i class='bx bxl-behance'></i></a>
             <a href="https://github.com/M4yc" target="_blank"><i class='bx bxl-github'></i></a>
         </div>
-        
-        <div class="home-avatar">
-            <img src="./assets/png/Avatar.png" alt="Avatar Maycon Araujo">
-        </div>
 
         <div class="home-hero__mouse-scroll-cont">
             <div class="mouse"></div>
@@ -149,14 +145,17 @@
                 <a href="#" class="btn-live-demo">Live Demo</a>
             </div>
             <div class="project-card">
-                <img src="./assets/jpg/photo7.jpg" alt="Projeto 4">
-                <h3>Título do Projeto 4</h3>
-                <p>Descrição breve do projeto 4.</p>
+                <img src="./assets/svg/PyGame.gif" alt="Projeto 4">
+                <h3>Snake Game</h3>
+                <p>Este é um jogo da cobrinha clássico implementado em Python usando a biblioteca Pygame.</p>
                 <div class="tags">
-                    <span>#Tag1</span>
-                    <span>#Tag2</span>
+                    <span class="span-python">Python</span>
+                    <span class="span-game">Game</span>
                 </div>
-                <a href="#" class="btn-live-demo">Live Demo</a>
+                <div class="buttons">
+                    <a href="https://github.com/M4yc/SnakeGame" target="_blank" class="btn-live-demo">Source Code</a>
+                    <a href="https://github.com/M4yc/SnakeGame" target="_blank" class="btn-live-demo">Live Demo</a>
+                </div>
             </div>
             <div class="project-card">
                 <img src="./assets/jpg/photo8.jpg" alt="Projeto 5">
@@ -188,6 +187,7 @@
                     <span class="span-javascript">Java Script</span>
                 </div>
                 <a href="#" class="btn-live-demo">Live Demo</a>
+                
             </div>
             <div class="project-card">
                 <img src="./assets/jpg/photo11.jpg" alt="Projeto 8">
