:sparkles: Update cod

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <h3>Desenvolvedor & UI Designer</h3>
             <p>Combinando criatividade e tecnologia para construir produtos que se destacam no mercado.</p>
             <div class="btn-box">
-                <a href="#">Vamos Conversar</a>
-                <a href="#">Saiba Mais</a>
+                <button>Vamos Conversar</button>
+                <button>Saiba Mais</button>
             </div>
         </div>
 
