--- a/index.html
+++ b/index.html
@@ -215,31 +215,45 @@
         <div class="services-grid">
             <div class="service-card">
                 <div class="icon">
-                    <i class='bx bx-palette'></i>
+                    <i class='bx bx-cog' ></i>
                 </div>
-                <h3>Design Gráfico</h3>
-                <p>Criamos designs únicos e atrativos que comunicam sua mensagem de forma eficaz.</p>
+                <h3>Montagem e Manutenção de Computadores</h3>
+                <p>Configuração e reparos para garantir que seu computador funcione perfeitamente.</p>
             </div>
             <div class="service-card">
                 <div class="icon">
                     <i class='bx bx-globe' ></i>
                 </div>
-                <h3>Desenvolvimento Web</h3>
-                <p>Desenvolvimento de sites responsivos e funcionais com as melhores práticas de UI/UX.</p>
+                <h3>Desenvolvimento de Sites e E-commerce</h3>
+                <p>Criação de sites e lojas virtuais modernos, otimizados para conversões e experiência do usuário.</p>
             </div>
             <div class="service-card">
                 <div class="icon">
-                    <i class='bx bxs-invader' ></i>
+                    <i class='bx bxl-sketch' ></i>
                 </div>
-                <h3>Consultoria de TI</h3>
-                <p>Consultoria especializada para otimizar os processos tecnológicos da sua empresa.</p>
+                <h3>UI Designer</h3>
+                <p>Design de interfaces visuais que combinam estética e funcionalidade, proporcionando uma navegação intuitiva.</p>
             </div>
             <div class="service-card">
                 <div class="icon">
-                    <i class='bx bxl-instagram' ></i>
+                    <i class='bx bxl-python'></i>
                 </div>
-                <h3>Marketing Digital</h3>
-                <p>Estratégias de marketing digital para aumentar sua presença online e gerar mais leads.</p>
+                <h3>Automações em Python</h3>
+                <p>Desenvolvimento de scripts e soluções automatizadas para otimizar processos e tarefas.</p>
+            </div>
+            <div class="service-card">
+                <div class="icon">
+                    <i class='bx bx-home' ></i>
+                </div>
+                <h3>Automações Residenciais</h3>
+                <p>Transformação de ambientes domésticos em espaços inteligentes com tecnologia automatizada.</p>
+            </div>
+            <div class="service-card">
+                <div class="icon">
+                    <i class='bx bxs-videos' ></i>
+                </div>
+                <h3>Edição de Vídeos</h3>
+                <p>Criação e edição de vídeos profissionais, transformando sua visão em conteúdo visual impactante.</p>
             </div>
         </div>
     </section>
@@ -251,16 +265,17 @@
             <div class="contact-form">
                 <form action="#" method="post">
                     <div class="form-group">
-                        <input type="text" id="name" name="name" required>
                         <label for="name">Nome</label>
+                        <input type="text" id="name" name="name" required="" autocomplete="off">
                     </div>
                     <div class="form-group">
-                        <input type="email" id="email" name="email" required>
                         <label for="email">E-mail</label>
+                        <input type="email" id="email" name="email" required="">
+                        
                     </div>
                     <div class="form-group">
-                        <textarea id="message" name="message" rows="4" required></textarea>
                         <label for="message">Mensagem</label>
+                        <textarea id="message" name="message" rows="4" required=""></textarea>
                     </div>
                     <button type="submit" class="btn-submit">Enviar Mensagem</button>
                 </form>
