:sparkles: Add link Project 8

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 
             </div>
             <div class="project-card">
-                <img src="./assets/png/videoframe_76.png" alt="Projeto 8" href="https://drive.google.com/drive/folders/1g6Lpuvz-QznZ_jqiasToR4ejz_Jf3A-S">
+                <img src="./assets/png/videoframe_76.png" alt="Projeto 8" href="https://drive.google.com/file/d/1WBOEVSVw4oeJFDfl3GFen957dRlHiaxJ/view?usp=sharing">
                 <h3>Rega Automática</h3>
                 <p>Este projeto consiste na criação de um sistema de rega automática controlado por um Arduino.</p>
                 <div class="tags">
