--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 </div>
                 <div class="buttons">
                     <a href="#" target="_blank" class="btn-live-demo">Source Code</a>
-                    <a href="https://drive.google.com/drive/folders/1g6Lpuvz-QznZ_jqiasToR4ejz_Jf3A-S" target="_blank" class="btn-live-demo">Video</a>
+                    <a href="https://drive.google.com/file/d/1WBOEVSVw4oeJFDfl3GFen957dRlHiaxJ/view?usp=sharing" target="_blank" class="btn-live-demo">Video</a>
                 </div>
             </div>
         </div>
