:bug: Bug pastas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Portfolio</title>
     <link rel="shortcut icon" href="/assets/image/ico/Logo_white_256.ico" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -303,7 +303,7 @@
             </div>
         </div>
     </footer>
-    <script src="/assets/js/scripts.js"></script>
+    <script src="/js/scripts.js"></script>
     <div class="overlay"></div>
 </body>
 
