:pencil: Text: Add Text Experiencias

--- a/index.html
+++ b/index.html
@@ -88,29 +88,24 @@
             <h2 class="section-title">Experiências</h2>
             <div class="experience-grid">
                 <div class="company-list">
-                    <div class="company one">
+                    <div class="company" data-experience="naja-cursos">
                         <h3>Naja Cursos</h3>
                     </div>
-                    <div class="company two">
+                    <div class="company" data-experience="nero">
                         <h3>Nero</h3>
                     </div>
-                    <div class="company three">
+                    <div class="company" data-experience="sm-marketing">
                         <h3>SM Marketing</h3>
                     </div>
                 </div>
                 <div class="experience-details">
                     <div class="text-experience">
                         <div>
-                            <h4 class="titleExperience">Monitor de Cursos</h4>
-                            <p class="dateExperience">Dez 2021 - Mar 2022 (4 Meses)</p>
+                            <h4 class="titleExperience" id="experience-title">Monitor de Cursos</h4>
+                            <p class="dateExperience" id="experience-date">Dez 2021 - Mar 2022 (4 Meses)</p>
                         </div>
-                        <h5 class="companyExperience">Naja Cursos</h5>
-                        <p class="changeExperience">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                            Praesentium veritatis quisquam nisi labore dolorum voluptas 
-                            temporibus nulla illum et ipsam maiores necessitatibus in ut 
-                            nihil, atque, similique nostrum odio omnis.
-                        </p>
+                        <h5 class="companyExperience" id="experience-company">Naja Cursos</h5>
+                        <p class="changeExperience" id="experience-description">Na NAJA Cursos, atuei como monitor de aulas nos cursos de informática, incluindo Word, Excel e PowerPoint. Além disso, ministrei aulas sobre montagem e manutenção de computadores, proporcionando uma base sólida para os alunos em tecnologia. Também desempenhei a função de fiscal de provas para a FGV, garantindo a integridade e o bom andamento dos exames.</p>
                     </div>
                 </div>
             </div>
