:up: Update Add link forms

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             <h2>Entre em Contato</h2>
             <p>Estou sempre aberto a discutir novos projetos, ideias criativas ou oportunidades para fazer parte da sua visão.</p>
             <div class="contact-form">
-                <form action="#" method="post">
+                <form action="https://formcarry.com/s/mqSx8qLL0K2" method="post">
                     <div class="form-group">
                         <label for="name">Nome</label>
                         <input type="text" id="name" name="name" required="" autocomplete="off">
