:sparkles: Add Projects 5 6

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <h3>Desenvolvedor & UI Designer</h3>
             <p>Combinando criatividade e tecnologia para construir produtos que se destacam no mercado.</p>
             <div class="btn-box">
-                <button>Vamos Conversar</button>
-                <button>Saiba Mais</button>
+                <button class="btn">Vamos Conversar</button>
+                <button class="btn">Saiba Mais</button>
             </div>
         </div>
 
@@ -164,22 +164,22 @@
                 </div>
             </div>
             <div class="project-card">
-                <img src="./assets/image/jpg/photo8.jpg" alt="Projeto 5">
-                <h3>Título do Projeto 5</h3>
-                <p>Descrição breve do projeto 5.</p>
+                <img src="./assets/image/png/Cripto.png" alt="Projeto 5">
+                <h3>UI Interface Crypto</h3>
+                <p>Eu desenvolvi uma interface de landing page para um site de NFTs, focando na apresentação clara das coleções, informações sobre artistas, detalhes de compra e uma área interativa para a comunidade.</p>
                 <div class="tags">
-                    <span>#Tag1</span>
-                    <span>#Tag2</span>
+                    <span class="span-ui">UI Design</span>
+                    <span class="span-figma">Figma</span>
                 </div>
                 <a href="#" class="btn-live-demo">Live Demo</a>
             </div>
             <div class="project-card">
-                <img src="./assets/image/jpg/photo9.jpg" alt="Projeto 6">
-                <h3>Título do Projeto 6</h3>
-                <p>Descrição breve do projeto 6.</p>
+                <img src="./assets/image/png/Vpixel.png" alt="Projeto 6">
+                <h3>UI App Vpixel</h3>
+                <p>O projeto Vpixel visa desenvolver uma interface para um aplicativo dedicado a jogadores de Valorant. O aplicativo tem como foco o aprendizado e compartilhamento de "Pixels", publicação de vídeos e jogadas e Chat para conversas.</p>
                 <div class="tags">
-                    <span>#Tag1</span>
-                    <span>#Tag2</span>
+                    <span class="span-ui">UI Design</span>
+                    <span class="span-figma">Figma</span>
                 </div>
                 <a href="#" class="btn-live-demo">Live Demo</a>
             </div>
@@ -266,17 +266,14 @@
             <div class="contact-form">
                 <form action="https://formcarry.com/s/mqSx8qLL0K2" method="post">
                     <div class="form-group">
-                        <label for="name">Nome</label>
-                        <input type="text" id="name" name="name" required="" autocomplete="off">
+                        <input type="text" id="name" name="name" required="" autocomplete="off" placeholder="Name" class="input-style">
                     </div>
                     <div class="form-group">
-                        <label for="email">E-mail</label>
-                        <input type="email" id="email" name="email" required="">
+                        <input type="email" id="email" name="email" required="" placeholder="E-mail" class="input-style">
                         
                     </div>
                     <div class="form-group">
-                        <label for="message">Mensagem</label>
-                        <textarea id="message" name="message" rows="4" required=""></textarea>
+                        <textarea id="message" name="message" rows="4" required="" placeholder="Mensagem" class="input-style"></textarea>
                     </div>
                     <button type="submit" class="btn-submit">Enviar Mensagem</button>
                 </form>
