:up: Update text

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <div class="project-card">
                 <img src="./assets/image/png/videoframe_76.png" alt="Projeto 8" href="https://drive.google.com/file/d/1WBOEVSVw4oeJFDfl3GFen957dRlHiaxJ/view?usp=sharing">
                 <h3>Rega Automática</h3>
-                <p>Este projeto consiste na criação de um sistema de rega automática controlado por um Arduino.</p>
+                <p>Desenvolvi um sistema de rega automática com Arduino, utilizando sensores de umidade do solo e relés. O sistema monitora constantemente a umidade e aciona a irrigação de forma inteligente, garantindo um uso eficiente da água e mantendo as plantas saudáveis de maneira automatizada.</p>
                 <div class="tags">
                     <span class="span-arduino">Arduino</span>
                     <span class="span-sensores">Sensores</span>
