:up: Update Style Buttons

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <span>Instagram</span>
                     <span>Facebook</span>
                 </div>
-                <a href="#" class="btn-live-demo">Live Demo</a>
+                <a href="#" class="project-btn">Live Demo</a>
             </div>
             <div class="project-card">
                 <img src="./assets/image/jpg/photo5.jpg" alt="Projeto 2">
@@ -134,7 +134,7 @@
                     <span>IoT</span>
                     <span>Sensores</span>
                 </div>
-                <a href="#" class="btn-live-demo">Live Demo</a>
+                <a href="#" class="project-btn">Live Demo</a>
             </div>
             <div class="project-card">
                 <img src="./assets/image/jpg/photo6.jpg" alt="Projeto 3">
@@ -145,22 +145,22 @@
                     <span class="span-sensores">Sensores</span>
                 </div>
                 <div class="buttons">
-                    <a href="#" target="_blank" class="btn-live-demo">Source Code</a>
-                    <a href="#" target="_blank" class="btn-live-demo">Video</a>
+                    <a href="#" target="_blank" class="project-btn">Source Code</a>
+                    <a href="#" target="_blank" class="project-btn">Video</a>
                 </div>
                 
             </div>
             <div class="project-card">
                 <img src="./assets/image/svg/PyGame.gif" alt="Projeto 4">
                 <h3>Snake Game</h3>
-                <p>Este é um jogo da cobrinha clássico implementado em Python usando a biblioteca Pygame.</p>
+                <p>O jogo "Snake Game", desenvolvido em Python com a biblioteca Pygame, tive uma experiência divertida e desafiadora. No jogo você controla a cobra que come alimentos, aumentando de tamanho e acumulando pontos.</p>
                 <div class="tags">
                     <span class="span-python">Python</span>
                     <span class="span-game">Game</span>
                 </div>
                 <div class="buttons">
-                    <a href="https://github.com/M4yc/SnakeGame" target="_blank" class="btn-live-demo">Source Code</a>
-                    <a href="https://github.com/M4yc/SnakeGame" target="_blank" class="btn-live-demo">Live Demo</a>
+                    <a href="https://github.com/M4yc/SnakeGame" target="_blank" class="project-btn">Source Code</a>
+                    <a href="https://github.com/M4yc/SnakeGame" target="_blank" class="project-btn">Live Demo</a>
                 </div>
             </div>
             <div class="project-card">
@@ -171,7 +171,7 @@
                     <span class="span-ui">UI Design</span>
                     <span class="span-figma">Figma</span>
                 </div>
-                <a href="#" class="btn-live-demo">Live Demo</a>
+                <a href="#" class="project-btn">Live Demo</a>
             </div>
             <div class="project-card">
                 <img src="./assets/image/png/Vpixel.png" alt="Projeto 6">
@@ -181,7 +181,7 @@
                     <span class="span-ui">UI Design</span>
                     <span class="span-figma">Figma</span>
                 </div>
-                <a href="#" class="btn-live-demo">Live Demo</a>
+                <a href="#" class="project-btn">Live Demo</a>
             </div>
             <div class="project-card">
                 <img src="./assets/image/jpg/photo10.jpg" alt="Projeto 7">
@@ -192,8 +192,7 @@
                     <span class="span-css">CSS</span>
                     <span class="span-javascript">Java Script</span>
                 </div>
-                <a href="#" class="btn-live-demo">Live Demo</a>
-                
+                <a href="#" class="project-btn">Live Demo</a>
             </div>
             <div class="project-card">
                 <img src="./assets/image/png/videoframe_76.png" alt="Projeto 8" href="https://drive.google.com/file/d/1WBOEVSVw4oeJFDfl3GFen957dRlHiaxJ/view?usp=sharing">
@@ -204,8 +203,8 @@
                     <span class="span-sensores">Sensores</span>
                 </div>
                 <div class="buttons">
-                    <a href="#" target="_blank" class="btn-live-demo">Source Code</a>
-                    <a href="https://drive.google.com/file/d/1WBOEVSVw4oeJFDfl3GFen957dRlHiaxJ/view?usp=sharing" target="_blank" class="btn-live-demo">Video</a>
+                    <a href="#" target="_blank" class="project-btn">Source Code</a>
+                    <a href="https://drive.google.com/file/d/1WBOEVSVw4oeJFDfl3GFen957dRlHiaxJ/view?usp=sharing" target="_blank" class="project-btn">Video</a>
                 </div>
             </div>
         </div>
