:lipstick: Change colors Buttons

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    
     <canvas id="matrix"></canvas>
     <div class="container">
 
@@ -21,10 +22,10 @@
             <h3>Maycon Araujo</h3>
         </div>
         <nav class="navbar">
-            <a href="#" class="active">Home</a>
+            <a href="#home" class="active">Home</a>
             <a href="#about">Sobre</a>
             <a href="#services">Serviços</a>
-            <a href="#home">Portfolio</a>
+            <a href="#projects">Projetos</a>
             <a href="#contact">Contato</a>
         </nav>
     </header>
@@ -35,8 +36,8 @@
             <h3>Desenvolvedor & UI Designer</h3>
             <p>Combinando criatividade e tecnologia para construir produtos que se destacam no mercado.</p>
             <div class="btn-box">
-                <button class="btn">Vamos Conversar</button>
-                <button class="btn">Saiba Mais</button>
+                <a class="btn" href="http://wa.link/50m4vh" target="_blank">Vamos Conversar</a>
+                <a class="btn" href="#about">Saiba Mais</a>
             </div>
         </div>
 
