--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             <h2>Entre em Contato</h2>
             <p>Estou sempre aberto a discutir novos projetos, ideias criativas ou oportunidades para fazer parte da sua visão.</p>
             <div class="contact-form">
-                <form action="https://formcarry.com/s/mqSx8qLL0K2" method="post">
+                <form action="https://formsubmit.co/mayconvbatista84@gmail.com" method="POST">
                     <div class="form-group">
                         <input type="text" id="name" name="name" required="" autocomplete="off" placeholder="Name" class="input-style">
                     </div>
@@ -275,6 +275,7 @@
                     <div class="form-group">
                         <textarea id="message" name="message" rows="4" required="" placeholder="Mensagem" class="input-style"></textarea>
                     </div>
+                    <input type="hidden" name="_template" value="table">
                     <button type="submit" class="btn-submit">Enviar Mensagem</button>
                 </form>
             </div>
