🆙 Update Links & Resposive Footer

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <span class="span-ui">UI Design</span>
                     <span class="span-figma">Figma</span>
                 </div>
-                <a href="#" class="project-btn">Live Demo</a>
+                <a href="https://www.behance.net/gallery/160985141/Crypto-Landing-Page" target="_blank" class="project-btn">Visualizar Projeto</a>
             </div>
             <div class="project-card">
                 <img src="./assets/image/png/Vpixel.png" alt="Projeto 6">
@@ -182,7 +182,7 @@
                     <span class="span-ui">UI Design</span>
                     <span class="span-figma">Figma</span>
                 </div>
-                <a href="#" class="project-btn">Live Demo</a>
+                <a href="https://www.behance.net/gallery/162854609/Vpixel-Ui-Case-Study" target="_blank" class="project-btn">Visualizar Projeto</a>
             </div>
             <div class="project-card">
                 <img src="./assets/image/jpg/photo10.jpg" alt="Projeto 7">
@@ -287,7 +287,7 @@
         <div class="grid-layout">
             <p>
                 Copyright © 2024
-                <a href="#" rel="noopener" target="_blank">Maycon Araujo</a>Todos os direitos reservados.
+                <a href="https://github.com/M4yc" rel="noopener" target="_blank">Maycon Araujo</a>Todos os direitos reservados.
             </p>
 
             <div class="powered-by">
