--- a/index.html
+++ b/index.html
@@ -117,14 +117,13 @@
         <h2>Meus Projetos</h2>
         <div class="projects-grid">
             <div class="project-card">
-                <img src="./assets/image/jpg/photo4.jpg" alt="Projeto 1">
-                <h3>Título do Projeto 1</h3>
-                <p>Descrição breve do projeto 1.</p>
+                <img src="./assets/image/png/GeradorSenha.png" alt="Projeto 1">
+                <h3>Gerador de Senhas</h3>
+                <p>Este é um Gerador de Senhas Seguras em Python com interface gráfica criada com CustomTkinter. Ele permite gerar senhas aleatórias e seguras, combinando caracteres especiais, números e letras, conforme o tamanho escolhido.</p>
                 <div class="tags">
-                    <span>Instagram</span>
-                    <span>Facebook</span>
+                    <span class="span-python">Python</span>
                 </div>
-                <a href="#" class="project-btn">Live Demo</a>
+                <a href="https://github.com/M4yc/Password_Generator" class="project-btn">Source Code</a>
             </div>
             <div class="project-card">
                 <img src="./assets/image/jpg/photo5.jpg" alt="Projeto 2">
@@ -138,16 +137,14 @@
                 <a href="#" class="project-btn">Live Demo</a>
             </div>
             <div class="project-card">
-                <img src="./assets/image/jpg/photo6.jpg" alt="Projeto 3">
-                <h3>Radar de Obstáculos</h3>
-                <p>Radar de obstáculos com arduino, servo motor e sensor ultrasonico</p>
+                <img src="./assets/image/png/Automatic.gif" alt="Projeto 3">
+                <h3>Automação de produtos</h3>
+                <p>Esta automação desenvolvida em Python realiza o cadastro de produtos em um sistema a partir de um arquivo .txt. O script lê os dados dos produtos e realiza o cadastro automaticamente, poupando tempo e reduzindo erros manuais.</p>
                 <div class="tags">
-                    <span class="span-arduino">Arduino</span>
-                    <span class="span-sensores">Sensores</span>
+                    <span class="span-python">Python</span>
                 </div>
                 <div class="buttons">
-                    <a href="#" target="_blank" class="project-btn">Source Code</a>
-                    <a href="#" target="_blank" class="project-btn">Video</a>
+                    <a href="https://github.com/M4yc/auto-product-catalog" target="_blank" class="project-btn">Source Code</a>
                 </div>
                 
             </div>
